--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     type: caffeine
     caffeine:
       spec: maximumSize=100,expireAfterWrite=10m
+    cache-names: weatherCache
 
 app:
   weather:
